--- a/client/src/Components/Misc/Gallery/Gallery.module.scss
+++ b/client/src/Components/Misc/Gallery/Gallery.module.scss
@@ -84,6 +84,8 @@
   @include dimensions(65%, 90%);
   margin: 2rem auto;
   position: relative;
+  min-width: 700px;
+  z-index: 6;
 
   -webkit-animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
@@ -150,11 +152,10 @@
 
 @media only screen and (max-width: 850px) {
   .gallery {
-    height:clamp(500px,45vh,700px);
-    
+    height: clamp(500px, 45vh, 700px);
 
     & > img {
-      object-fit:cover;
+      object-fit: cover;
     }
   }
 
@@ -170,9 +171,22 @@
   }
 }
 
-
 @media only screen and (max-width: 600px) {
   .gallery {
-    height:40vh;
+    height: 40vh;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .lightbox-gallery {
+    @include dimensions(500px, 90vw);
+    margin: auto;
+    min-width: 0;
+
+    rotate: 90deg;
+    translate: -50% -50%;
+    top: 50%;
+    left: 50%;
+  }
+}
+
