--- a/client/src/Components/ErrorHandlers/404.module.scss
+++ b/client/src/Components/ErrorHandlers/404.module.scss
@@ -18,7 +18,7 @@
   box-shadow: $shadow-2;
   @include border(null, null, null, 50px 15px);
 
-  font-size: map-get($font-sizes, "large");
+  font-size: clamp(6px, 10vw, 1.5rem);
   font-family: $link-font;
 
   z-index: 1;
@@ -67,5 +67,42 @@
     max-width: 90vw;
     pointer-events: none;
     filter: hue-rotate(45deg);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .main {
+    margin-top: calc($offset-top-header * 2);
+  }
+
+  .message-box {
+    padding: 1.5rem;
+    width: 70%;
+    @include border(null, null, null, map-get($radius, "medium"));
+
+    a,
+    a:active,
+    a:visited,
+    a:link {
+      width: 300px;
+      max-width: 70vw;
+      padding: 0.8rem;
+      bottom: calc(-5rem + 3vw);
+    }
+  }
+
+  .image-box {
+    margin: 0 auto;
+
+    & img {
+      margin-top: $offset-top-header;
+      @include dimensions(65vw, auto);
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    min-height: 0;
   }
 }
