visual tweaks on error message, resolved click bug on show filters button, fixed annoying scroll on edit page state update

--- a/client/src/Components/Catalogue/Catalogue.module.scss
+++ b/client/src/Components/Catalogue/Catalogue.module.scss
@@ -134,6 +134,10 @@
     cursor: pointer;
     transition: $transition;
 
+    span {
+      pointer-events: none;
+    }
+
     &:hover {
       color: $font-color-2;
     }
