--- a/client/src/Components/Misc/Error/ErrorBox.module.scss
+++ b/client/src/Components/Misc/Error/ErrorBox.module.scss
@@ -15,6 +15,7 @@
 
   color: $font-color-3;
   font-family: $link-font;
+  text-align: center;
 
   -webkit-animation: fade-out 1s ease-out both 1s;
   animation: fade-out 1s ease-out both 1s;
