--- a/client/src/main-styles/common.scss
+++ b/client/src/main-styles/common.scss
@@ -73,6 +73,10 @@
   border-radius: 25% 0 0 25%;
 }
 
+.cursor-pointer {
+  cursor:pointer;
+}
+
 textarea {
   @include dimensions(80%, 100%);
   min-height: 100px;
